# sundai-ai-writing

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  train_dpo.py
configs/: infer.toml  orch.toml  prime_rl.toml  rl.toml  sft.toml
environments/creative_writing/: README.md  __init__.py  creative_writing.py  pyproject.toml
environments/creative_writing/.prime/: .env-metadata.json
scripts/: extract_unslop_pairs.py  setup-pod.sh
