[project]
name = "my-writing-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
    "verifiers>=0.1.10",
]
