[project]
name = "creative-writing"
description = "Creative writing RL environment using LitBench BT reward model"
tags = ["creative-writing", "prose", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["creative_writing.py", "__init__.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 3
